# odin

./: .env.docker  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  compose.yaml  docker-compose.yml  pyproject.toml
docs/: A2A_PROTOCOL.md  AGUI_PROTOCOL.md  README.md  architecture-redesign.md  configuration.md  copilotkit-best-practices.md  generative-ui.md  openapi.yaml  quick-start.md
docs/development/: MONITORING.md
docs/plans/: 2025-01-10-mobile-agent-design.md  2025-01-10-mobile-agent-implementation.md
examples/: a2a_client_demo.py  a2a_server_demo.py  agui_client_demo.py  basic_usage.py  claude_desktop_config.json  copilotkit_backend.py  custom_plugin.py  decorator_demo.py  end_to_end_agent.py  framework_demo.py  mcp_server_demo.py  monitoring_demo.py  protocol_agnostic_agent.py  test_a2a.py  test_mcp.py
examples/copilotkit_frontend/: README.md
examples/demo/: .env.example  README.md  app.yaml  main.py  start.sh  supervisord.conf
examples/demo/frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json
examples/demo/frontend/src/app/: layout.tsx  page.tsx
examples/demo/plugins/: __init__.py  calendar.py  data.py  weather.py
examples/generative-ui/: README.md
examples/generative-ui/backend/: main.py
examples/generative-ui/backend/plugins/: __init__.py  data_tools.py  ui_tools.py
examples/generative-ui/frontend/: package-lock.json  package.json
examples/generative-ui/frontend/src/app/: globals.css  layout.tsx  page.tsx
examples/generative-ui/frontend/src/app/api/copilotkit/: route.ts
examples/generative-ui/frontend/src/components/: AlertRenderer.tsx  CardRenderer.tsx  ChartRenderer.tsx  DashboardRenderer.tsx  FormRenderer.tsx  ProgressRenderer.tsx  SearchResultsRenderer.tsx  TableRenderer.tsx  index.ts
n8n/: README.md  notebookllm-automation.json
scripts/: test_hdc_connection.py  test_mobile_agent.py
src/odin/: __init__.py  __main__.py  app.py  cli.py  server.py
src/odin/agents/mobile/: __init__.py  base.py  dexter.py  factory.py  hierarchical.py  plan_execute.py  prompts.py  react.py
src/odin/compat/: __init__.py
src/odin/config/: __init__.py  app_config.py  settings.py
src/odin/core/: __init__.py  agent_factory.py  agent_interface.py  llm_factory.py  odin.py
src/odin/core/agent_backends/: __init__.py  crewai_backend.py
src/odin/decorators/: __init__.py  metrics.py  tool.py
src/odin/errors/: __init__.py  base.py  codes.py  handlers.py
src/odin/logging/: __init__.py  logger.py
src/odin/plugins/: __init__.py  base.py  manager.py
src/odin/plugins/builtin/: __init__.py  content.py  gemini.py  github.py  google.py  http.py  notebookllm.py  ppt_converter.py  publishers.py  trending.py  utilities.py  xiaohongshu.py
src/odin/plugins/builtin/mobile/: __init__.py  coordinates.py  interaction.py  plugin.py
src/odin/plugins/builtin/mobile/configs/: __init__.py  app_loader.py  app_map.yaml
src/odin/plugins/builtin/mobile/controllers/: __init__.py  adb.py  base.py  hdc.py
src/odin/plugins/crewai/: __init__.py  plugin.py
src/odin/protocols/: __init__.py  base_adapter.py  protocol_dispatcher.py
src/odin/protocols/a2a/: __init__.py  adapter.py  agent_card.py  models.py  server.py  task_manager.py
src/odin/protocols/agui/: __init__.py  adapter.py  encoder.py  models.py  server.py
src/odin/protocols/copilotkit/: __init__.py  adapter.py  adapter_v2.py
src/odin/protocols/http/: __init__.py  adapter.py  server.py
src/odin/protocols/mcp/: __init__.py  adapter.py  server.py  streamable_http.py
src/odin/protocols/mobile/: __init__.py  client.py  models.py  server.py
src/odin/templates/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
src/odin/templates/agent/: Dockerfile  main.py  pyproject.toml
src/odin/templates/agent/tools/: __init__.py  example.py  utilities.py
src/odin/templates/backend/: .env.example  main.py
src/odin/templates/backend/plugins/: __init__.py  example.py
src/odin/templates/frontend/: .env.example  .gitignore  package.json
src/odin/templates/frontend/src/app/: layout.tsx  page.tsx
src/odin/templates/frontend/src/app/api/copilotkit/: route.ts
src/odin/templates/ui/: Dockerfile  next.config.mjs  package.json
src/odin/templates/ui/src/app/: layout.tsx  page.tsx
src/odin/templates/ui/src/app/api/copilotkit/: route.ts
src/odin/tools/: __init__.py  http.py  notebookllm.py  utilities.py
src/odin/tracing/: __init__.py  decorators.py  metrics.py  prometheus.py  setup.py
src/odin/utils/: __init__.py  browser.py  browser_session.py  http_client.py  progress.py
tests/: README.md  conftest.py
tests/fixtures/: __init__.py  mocks.py  plugins.py
tests/unit/: __init__.py  test_builtin_plugins.py  test_cli.py  test_config.py  test_decorators.py  test_errors.py  test_logging.py  test_odin_core.py  test_plugin_manager.py  test_plugins.py
tests/unit/agents/mobile/: test_base.py  test_hierarchical.py  test_plan_execute.py  test_react.py
tests/unit/plugins/mobile/: __init__.py  test_coordinates.py  test_interaction.py  test_plugin.py
tests/unit/plugins/mobile/configs/: __init__.py  test_app_loader.py
tests/unit/plugins/mobile/controllers/: test_adb.py  test_base.py
tests/unit/test_protocols/: __init__.py  test_a2a_models.py  test_agui_encoder.py  test_agui_models.py  test_protocol_dispatcher.py
tests/unit/test_tracing/: test_decorators.py  test_metrics.py
tests/unit/test_utils/: test_http_client.py  test_progress.py
ui/: Dockerfile  package.json
ui/src/app/: layout.tsx  page.tsx
